--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,10 @@ body {
     background-color: #272727;
     color: antiquewhite;
     font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+}
+* {
+    box-sizing: border-box;
+    color: antiquewhite;
 }
